// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskForm Test Empty form rendering 1`] = `
<TaskForm
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedEmptyTaskForm
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test render completed task 1`] = `
<TaskForm
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": true,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": true,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test rendering form 1`] = `
<TaskForm
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test rendering form from task in context 1`] = `
<TaskForm
  onSubmitError={[MockFunction]}
  onSubmitSuccess={[MockFunction]}
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test rendering form with HTTP error 1`] = `
<TaskForm
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <KogitoEmptyState
    body="Cannot find form"
    ouiaId="task-form-no-form"
    title="No form to show"
    type={3}
  >
    <MockedComponent />
  </KogitoEmptyState>
</TaskForm>
`;

exports[`TaskForm Test Test rendering form with JS error 1`] = `
<TaskForm
  onSubmitError={[MockFunction]}
  onSubmitSuccess={[MockFunction]}
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <KogitoEmptyState
    body="Cannot find form"
    ouiaId="task-form-no-form"
    title="No form to show"
    type={3}
  >
    <MockedComponent />
  </KogitoEmptyState>
</TaskForm>
`;

exports[`TaskForm Test Test submit error 1`] = `
<TaskForm
  onSubmitError={[MockFunction]}
  onSubmitSuccess={[MockFunction]}
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test submit error 2`] = `
<TaskForm
  onSubmitError={
    [MockFunction] {
      "calls": Array [
        Array [
          "phase",
          "Extra info!",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSubmitSuccess={[MockFunction]}
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test submit success 1`] = `
<TaskForm
  onSubmitError={[MockFunction]}
  onSubmitSuccess={[MockFunction]}
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;

exports[`TaskForm Test Test submit success 2`] = `
<TaskForm
  onSubmitError={[MockFunction]}
  onSubmitSuccess={
    [MockFunction] {
      "calls": Array [
        Array [
          "phase",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <MockedTaskFormRenderer
    formSchema={
      Object {
        "phases": Array [
          "complete",
          "release",
        ],
        "properties": Object {
          "traveller": Object {
            "input": true,
            "output": true,
            "properties": Object {
              "address": Object {
                "properties": Object {
                  "city": Object {
                    "type": "string",
                  },
                  "country": Object {
                    "type": "string",
                  },
                  "street": Object {
                    "type": "string",
                  },
                  "zipCode": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "email": Object {
                "format": "email",
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
            },
            "required": Array [
              "firstName",
              "lastName",
            ],
            "type": "object",
          },
          "trip": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "begin": Object {
                "format": "date-time",
                "type": "string",
              },
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "end": Object {
                "format": "date-time",
                "type": "string",
              },
              "visaRequired": Object {
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "visaApplication": Object {
            "input": true,
            "output": false,
            "properties": Object {
              "city": Object {
                "type": "string",
              },
              "country": Object {
                "type": "string",
              },
              "duration": Object {
                "type": "integer",
              },
              "firstName": Object {
                "type": "string",
              },
              "lastName": Object {
                "type": "string",
              },
              "nationality": Object {
                "type": "string",
              },
              "passportNumber": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      }
    }
    onSubmitError={[Function]}
    onSubmitSuccess={[Function]}
    task={
      Object {
        "actualOwner": null,
        "adminGroups": Array [],
        "adminUsers": Array [],
        "completed": null,
        "description": null,
        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "excludedUsers": Array [],
        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
        "lastUpdate": "2020-02-19T11:11:56.282Z",
        "name": "VisaApplication",
        "outputs": "{}",
        "potentialGroups": Array [],
        "potentialUsers": Array [],
        "priority": "1",
        "processId": "travels",
        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
        "referenceName": "Apply for visa",
        "rootProcessId": null,
        "rootProcessInstanceId": null,
        "started": "2020-02-19T11:11:56.282Z",
        "state": "Ready",
      }
    }
  />
</TaskForm>
`;
